# AO_2DBinPacking

./: .gitignore  CONTRIBUTING.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
data/in/: s1000_b10_10_p10_10.in  s1000_b10_10_p10_5.in  s1000_b10_10_p5_10.in  s1000_b10_10_p5_5.in  s1000_b10_25_p10_10.in  s1000_b10_25_p10_25.in  s1000_b10_25_p10_5.in  s1000_b10_25_p5_10.in  s1000_b10_25_p5_25.in  s1000_b10_25_p5_5.in  s1000_b10_5_p10_5.in  s1000_b10_5_p5_5.in  s1000_b25_10_p10_10.in  s1000_b25_10_p10_5.in  s1000_b25_10_p25_10.in  s1000_b25_10_p25_5.in  s1000_b25_10_p5_10.in  s1000_b25_10_p5_5.in  s1000_b25_25_p10_10.in  s1000_b25_25_p10_25.in  s1000_b25_25_p10_5.in  s1000_b25_25_p25_10.in  s1000_b25_25_p25_25.in  s1000_b25_25_p25_5.in  s1000_b25_25_p5_10.in  s1000_b25_25_p5_25.in  s1000_b25_25_p5_5.in  s1000_b25_5_p10_5.in  s1000_b25_5_p25_5.in  s1000_b25_5_p5_5.in  s1000_b5_10_p5_10.in  s1000_b5_10_p5_5.in  s1000_b5_25_p5_10.in  s1000_b5_25_p5_25.in  s1000_b5_25_p5_5.in  s1000_b5_5_p5_5.in  s100_b10_10_p10_10.in  s100_b10_10_p10_5.in  s100_b10_10_p5_10.in  s100_b10_10_p5_5.in  (+68 more)
src/: algorithms_launcher.py  main.py  packing_stats.py  ploting.py
src/algorithms/: algorithm.py  algorithm_base.py  best_fit_algorithm.py  first_fit_algorithm.py  longer_side_first_algorithm.py  next_fit_algorithm.py  worst_fit_algorithm.py
src/data_operations/: data_generator.py  generate_input_data.py
src/data_structures/: bin_2d.py  package_2d.py  point_2d.py
temp/: best_long_side_first.py  best_short_side_first.py  worst_fit_algorithm.py
(+8 files in other folders)
