[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.mypy]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tabulate"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.pyplot"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.patches"
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "src"
]